improve UI of CDP  admin

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -126,7 +126,7 @@
        <!--  Main Tabs of Profile Info -->
        <ul id="profile_info_tabs" class="nav nav-tabs" data-tab-content="profile_ext_data_tabs" style="margin-top:20px" >
          <li class="active" onclick="handleProfileTabBehavioralInfo()">
-          	<a href="javascript:" data-target-tab="panel_behavioral_Data" title="Customer Behavioral Data"> <i class="fa fa-heartbeat" aria-hidden="true"></i> Behaviors </a>
+          	<a href="javascript:" data-target-tab="panel_behavioral_Data" title="Customer Behavioral Data"> <i class="fa fa-heartbeat" aria-hidden="true"></i> Customer Behaviors </a>
          </li>
          
          <li onclick="handleProfileTabExtInfo()" >
