demo basic campaign flow

--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -117,7 +117,7 @@
 	       	<li id="segment_data_personalization" >
 				<a href="javascript:handleSegmentPersonalizationTabs()" data-target-tab="panel_segment_data_personalization" title="Data Personalization" > <i class="fa fa-smile-o" aria-hidden="true"></i> Personalization </a>
 	       	</li>
-	       	<li id="segment_campaigns" >
+	       	<li id="segment_campaigns" style="display: none;">
 				<a href="javascript:handleSegmentCampaignsTabs()" data-target-tab="panel_segment_automated_campaigns" title="Automated Campaigns" > <i class="fa fa-fw fa-cogs" aria-hidden="true"></i> Campaigns </a>
 	       	</li>
 	  	</ul>
