--- a/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
+++ b/resources/app-templates/leocdp-admin/modules/system/system-info-configs.html
@@ -26,10 +26,11 @@
 			<!--  Tab Navigation Items -->
 		    <ul class="nav nav-tabs" data-tab-content="system_info_tabs" >
 				<li class="active" >
-					<a href="javascript:" data-target-tab="panel_data_quality_scoring" title="Profile Metadata to compute the total of Data Quality Score" > <i class="fa fa-list-ul" aria-hidden="true"></i> Data Quality Scoring </a>
+					<a href="javascript:" data-target-tab="panel_data_quality_scoring" title="Profile Metadata to compute the total of Data Quality Score" > 
+					<i class="fa fa-list-ul" aria-hidden="true"></i> Data Quality Scoring </a>
 		       	</li>
-		       	<li style="display: none;">
-`					<a href="javascript:" data-target-tab="panel_sys_services" title="System Services" > <i class="fa fa-cogs" aria-hidden="true"></i> System Services </a>
+		       	<li>
+					<a href="javascript:" data-target-tab="panel_sys_services" title="System Services" > <i class="fa fa-cogs" aria-hidden="true"></i> System Services </a>
 		       	</li>
 		       	<li >
 					<a href="javascript:" data-target-tab="panel_sys_upgrade" title="Upgrade System" > <i class="fa fa-cloud-download" aria-hidden="true"></i> Upgrade System </a>
@@ -59,10 +60,10 @@
 				
 				<!-- tab 2 Event Report  -->
 				<div class="tab-pane " id="panel_sys_services" >
-					<div class="row" style="margin-bottom: 15px">
+					<div  >
 						<h4> <i class="fa fa-cogs" aria-hidden="true"></i> <mark> Configuration Management for Core System Services </mark> </h4>
 					</div>
-					<div class="row" id="configs_holder" >
+					<div  id="configs_holder" >
 						<!-- list -->
 					</div>
 				</div>
