--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -65,10 +65,15 @@
 							title="Event Data Report" data-container="body" data-toggle="popover" data-placement="right" data-content="Show reports about event data stream and event matrix" > 
 							<i class="fa fa-fw fa-line-chart"></i> Event Data Report </a>
 					</li>
-					<li>
+					<li style="display: none;">
 						<a id="CX_Data_Report" href="#calljs-leoCdpRouter('CX_Data_Report')" 
 							title="CX Data Report" data-container="body" data-toggle="popover" data-placement="right" data-content="Show customer experience reports: product/service rating and feedback survey" > 
 							<i class="fa fa-fw fa-tachometer"></i> CX Data Report </a>
+					</li>
+					<li style="display: none;">
+						<a id="Custom_Dashboard" href="#calljs-leoCdpRouter('Custom_Dashboard')" 
+							title="Custom Dashboard" data-container="body" data-toggle="popover" data-placement="right" data-content="Show custom dashboard about sales, marketing and finance" > 
+							<i class="fa fa-fw fa-bar-chart"></i> Custom Dashboard </a>
 					</li>
 				</ul>
 			</li>
