--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -88,7 +88,7 @@
 		         			<i class="fa fa-dot-circle-o" aria-hidden="true"></i> Touchpoint Item
 		         		</a>
 		         	</li>		         			         		         	
-		         	<li>
+		         	<li style="display: none;" >
 		         		<a href="javascript:setJourneyFlowGraphView()" data-target-tab="panel_flow_network_report" title="Network Flow Report" > 
 		         			<i class="fa fa-connectdevelop" aria-hidden="true"></i> Data Journey
 		         		</a>
@@ -157,7 +157,7 @@
 				  	</div>
 				</div>
 				
-				<div class="panel panel-cx">
+				<div class="panel panel-cx" style="display: none;">
             		<div class="panel-heading"> <h4 class="panel-title text-center"> <i class="fa fa-info-circle" aria-hidden="true"></i> CX Report in Total</h4> </div>
 				  	<div class="panel-body" id="cx_metrics_holder" >
 				  	</div>
