fix bugs and improve text label in profile UI

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -225,16 +225,16 @@
 				                   <p data-field="governmentIssuedIDs" data-fieldholder="html_hashset" data-fieldtype="hashset" data-editable="true" > </p>
 				              	</li>				               
                               	<li>
-				                   <label > <i class="fa fa-fw fa-list"></i> List of Platform Application ID <span class="small_highlight_text">(Data for Identity Resolution)</span> </label> 
+				                   <label > <i class="fa fa-fw fa-list"></i> List of Application User ID <span class="small_highlight_text">(Data for Identity Resolution)</span> </label> 
 				                   <button type="button" class="btn btn-do-now btn-xs" onclick="profileAddNewTextHashSet('applicationIDs')"title="Add New Application ID"  > 
-				    					<i class="fa fa-plus-circle" aria-hidden="true"></i> Add Application ID 
+				    					<i class="fa fa-plus-circle" aria-hidden="true"></i> Add Application User ID 
 				    			   </button>
 				                   <p data-field="applicationIDs" data-fieldholder="html_hashset" data-fieldtype="hashset" data-editable="true" > </p>
 				              	</li>
 				              	<li>
-				                   <label > <i class="fa fa-fw fa-list"></i> List of Loyalty ID <span class="small_highlight_text">(Data for Identity Resolution)</span> </label> 
+				                   <label > <i class="fa fa-fw fa-list"></i> List of Loyalty User ID <span class="small_highlight_text">(Data for Identity Resolution)</span> </label> 
 				                   <button type="button" class="btn btn-do-now btn-xs" onclick="profileAddNewTextHashSet('loyaltyIDs')"title="Add New Loyalty ID"  > 
-				    					<i class="fa fa-plus-circle" aria-hidden="true"></i> Add Loyalty ID 
+				    					<i class="fa fa-plus-circle" aria-hidden="true"></i> Add Loyalty User ID 
 				    			   </button>
 				                   <p data-field="loyaltyIDs" data-fieldholder="html_hashset" data-fieldtype="hashset" data-editable="true" > </p>
 				              	</li>
