improve UI, UX of cdp admin

--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -1,6 +1,9 @@
 
 <!-- Segment Details -->
 <style>
+	#sm_name {
+		padding: 8px;
+	}
 	.form-group .sm_purpose {
 		margin: 5px 0;
 		background-color: #e5e6e5;
@@ -70,9 +73,12 @@
 
 	<!-- Details  -->
 	<div class="panel panel-leoadmin">
-		<div class="panel-heading"> <b> <i class="fa fa-info-circle" aria-hidden="true"></i> Segment Name </b>  <span id="sm_name" class="highlight_text"></span> </div>
+		<div class="panel-heading"> <b> <i class="fa fa-info-circle" aria-hidden="true"></i> Segment Details </b>  </div>
 		<div class="panel-body row">
 			 <ul class="list-group">
+			 	<li class="list-group-item ">
+			  		<b>Name</b> <span id="sm_name" class="highlight_text"></span>
+			  	</li>
 			 	<li class="list-group-item ">
 			  		<b>Description</b> <span id="sm_description" ></span>
 			  	</li>
