--- a/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
@@ -43,8 +43,8 @@ th.sorting, th.sorting_desc, th.sorting_asc {
 	            <thead>
 	                <tr>
 	                	<th class="text-center"></th>
-	                    <th class="text-center">Segment Name</th>
-	                    <th class="text-center">Total Profile</th>
+	                    <th class="text-center">Name</th>
+	                    <th class="text-center">Size</th>
 	                    <th class="text-center">Description</th>
 	                    <th class="text-center">Data Owner</th>
 	                    <th class="text-center">Created at</th>
@@ -55,8 +55,8 @@ th.sorting, th.sorting_desc, th.sorting_asc {
 	            <tfoot>
 	                <tr>
 	                	<th class="text-center"></th>
-	                    <th class="text-center">Segment Name</th>
-	                    <th class="text-center">Total Profile</th>
+	                    <th class="text-center">Name</th>
+	                    <th class="text-center">Size</th>
 	                    <th class="text-center">Description</th>
 	                    <th class="text-center">Data Owner</th>
 	                    <th class="text-center">Created at</th>
