--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -84,20 +84,20 @@
 	                    </div>
 	        	 	</li>
                    	<li class="list-group-item" >
-				  		<i class="fa fa-tags" aria-hidden="true"></i> <b> In Journey Maps </b> <br>
-				  		<span class="data_field" id="profileInJourneyMaps" > </span> 
+				  		<i class="fa fa-tags" aria-hidden="true"></i> <b> In Data Journey Maps </b> <br>
+				  		<span id="profileInJourneyMaps" > </span> 
 				  	</li>
 				  	<li class="list-group-item">
-				  		<i class="fa fa-tags" aria-hidden="true"></i> <b> Segments </b> <br>
-				  		<span class="data_field" id="profileInSegments" > </span> 
+				  		<i class="fa fa-tags" aria-hidden="true"></i> <b> In Segments </b> <br>
+				  		<span id="profileInSegments" > </span> 
 				  	</li>
 				  	<li class="list-group-item" style="display: none">
-				  		<i class="fa fa-tags" aria-hidden="true"></i> <b> Accounts </b> <br>
-				  		<span class="data_field" id="profileInAccounts" > </span> 
+				  		<i class="fa fa-tags" aria-hidden="true"></i> <b> In Accounts </b> <br>
+				  		<span id="profileInAccounts" > </span> 
 				  	</li>
 				  	<li class="list-group-item">
 				  		<i class="fa fa-tags" aria-hidden="true"></i> <b> Data Labels </b> <br>
-				  		<span class="data_field" id="profileDataLabels" > </span> 
+				  		<span id="profileDataLabels" > </span> 
 				  	</li>
 			   	</ul>  
 	        	
@@ -152,10 +152,10 @@
 				<div class="row" >
 					<div class="col-lg-12"  >
 						<h4 class="highlight_text" > <i class="fa fa-map-o" aria-hidden="true"></i> Data Journey Map </h4> 
-	        			<div class='col-lg-8 col-xs-12' style="font-weight: bold;">
+	        			<div class='col-lg-6 col-xs-12' style="font-weight: bold;">
 	        				<select id="journeyMapList" data-placeholder="Choose an Journey Map" class="select" > </select>
 	        			</div>
-	        			<div class='col-lg-4 col-xs-12'>
+	        			<div class='col-lg-6 col-xs-12' style="visibility: hidden;">
 	        			 	<label>Sentiment Score </label>  <span id="profileJourneySentimentScore" class="data_field" >0</span>
 	        			</div>
 	        		</div>
