--- a/resources/app-templates/leocdp-admin/index.html
+++ b/resources/app-templates/leocdp-admin/index.html
@@ -33,6 +33,7 @@
 		var leoCdpEdition = '{{leoCdpEdition}}';
 		var minifySuffix = '{{minifySuffix}}';
 		var maxTotalDataQualityScore = parseInt('{{maxTotalDataQualityScore}}');
+		var defaultRecommendedItemForProfile = 50;
 	</script>
 	
 	<meta charset="UTF-8">
