--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -12,8 +12,6 @@
     font-size: 14px!important;
     font-weight: bold;
 }
-
-
 </style>
 
 <div class="row">
@@ -21,10 +19,13 @@
         <h5 class="page-header" id="page_breadcrumb" > </h5>
     </div>
     <div class="col-lg-7 text-right" style="padding: 10px">
-    	<button type="button" class="btn btn-do-now" onclick="refreshAllProfiles()" title="Refresh Profile List" > 
+    	<button type="button" class="btn btn-info" title="Go back" onclick="history.back()" > 
+			<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Back 
+		</button>
+    	<button type="button" class="btn btn-info" onclick="refreshAllProfiles()" title="Refresh Profile List" > 
     		<i class="fa fa-refresh" aria-hidden="true"></i> Refresh
     	</button>
-    	<button type="button" class="btn btn-info data-control-update" onclick="showMergeDuplicateProfileDialog()" title="Process all duplicated profiles into a single profile" > 
+    	<button type="button" class="btn btn-do-now data-control-update" onclick="showMergeDuplicateProfileDialog()" title="Process all duplicated profiles into a single profile" > 
     		<i class="fa fa-compress" aria-hidden="true"></i> Deduplicate All
     	</button>
     	<button type="button" class="btn btn-import-data data-control-update" onclick="importProfileHandler()" title="Import Profile from uploaded CSV file" > 
