improve and fix bugs

--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -79,12 +79,12 @@
 		          		</a>
 		         	</li>
             		<li>
-		         		<a href="javascript:" data-target-tab="panel_observer_report" title="Profile Sources by Observer" > 
+		         		<a href="javascript:showTouchpointHubReport()" data-target-tab="panel_observer_report" title="Profile Sources by Observer" > 
 		         			<i class="fa fa-dot-circle-o" aria-hidden="true"></i> Touchpoint Hub
 		         		</a>
 		         	</li>	         		
 		         	<li>
-		         		<a href="javascript:" data-target-tab="panel_touchpoint_report" title="Source Report Details at specific touchpoint" > 
+		         		<a href="javascript:showTouchpointItemReport()" data-target-tab="panel_touchpoint_report" title="Source Report Details at specific touchpoint" > 
 		         			<i class="fa fa-dot-circle-o" aria-hidden="true"></i> Touchpoint Item
 		         		</a>
 		         	</li>		         			         		         	
