--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-import.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-import.html
@@ -64,7 +64,7 @@
           	<div class="panel-heading"> <i class="fa fa-info" aria-hidden="true"></i> Profile Type and Data Labels </div>
 		  	<div class="panel-body"  >
 		  		<div class="col-md-12" style="margin-bottom: 10px">			    	
-					<label for="importProfileOverwriteOldData"> <input id="importProfileOverwriteOldData" type="checkbox" > Overwrite existing profiles </label> 
+					<label for="importProfileOverwriteOldData"> <input id="importProfileOverwriteOldData" type="checkbox" > This CSV data is verified. The system must update existing profiles </label> 
 				</div>
 		  		<div class="col-lg-12" style="margin-bottom: 15px">
 			  		<p style="font-weight: bold;">  Profile Type  </p>
